More work on upgrading unittests